# FaCE

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: alignment-with-paper.md  anti-plagiarism-policy.md  data-governance.md  ethics-statement.md  privacy-anonymization-policy.md
face/: __init__.py  cli.py  core.py  io.py
scripts/: face_opt_win.bat  face_strict_win.bat  run_face.sh
tests/: test_smoke.py
